--- a/how-we-work.html
+++ b/how-we-work.html
@@ -175,7 +175,7 @@
           </div>
         </div>
         <div class="col-md-6 12">
-          <img data-aos="fade-down" class="baner_img" src="./img/article_photo.svg" alt="Photo">
+          <img data-aos="fade-down" class="baner_img" src="./img/how_we_work_img1.svg" alt="Photo">
         </div>
       </div>
     </div>
@@ -196,68 +196,76 @@
   </div>
 </div>
 <footer class="footer">
-  <div class="container-fluid text-left">
-    <div class="row mb-3">
-      <div class="col-4">
-        <div class="footer_item_main item1">
-          <h4 class="item_title">CONTACT INFO</h4>
-          <div class="footer_address_block footer_colum">
-            <span class="icon_colum"><img src="./img/addressFlag.svg" alt=""></span>
-            <div class="address_content colum_content">
-              <p class="address_title">ADDRESS</p>
-              <span class="full_address">123 Street Name, City, England</span>
+  <div class="footer_container">
+    <div class="container-fluid text-left">
+      <div class="row mb-3">
+        <div class="col-md-3 col-12">
+          <div class="footer_item_main item1">
+            <h4 class="item_title">CONTACT INFO</h4>
+            <div class="footer_address_block footer_colum">
+              <span class="icon_colum"><img src="./img/addressFlag.svg" alt="icon"></span>
+              <div class="address_content colum_content">
+                <p class="address_title">ADDRESS</p>
+                <span class="full_address">1 Alek Manukyan, Gyumri, Armenia</span>
+              </div>
             </div>
-          </div>
 
-          <div class="footer_phone_block footer_colum">
-            <span class="icon_colum"><i class="fas fa-phone-alt"></i></span>
-            <div class="phone_content colum_content">
-              <p class="phone_title">PHONE</p>
-              <span class="full_number">Toll Free (123) 456-7890</span>
+            <div class="footer_phone_block footer_colum">
+              <span class="icon_colum"><i class="fas fa-phone-alt"></i></span>
+              <div class="phone_content colum_content">
+                <p class="phone_title">PHONE</p>
+                <span class="full_number">+374 94 327 347</span>
+              </div>
             </div>
-          </div>
 
-          <div class="footer_email_block footer_colum">
-            <span class="icon_colum"><i class="far fa-envelope"></i></span>
-            <div class="email_content colum_content">
-              <p class="email_title">EMAIL</p>
-              <span class="full_email">mail@example.com</span>
+            <div class="footer_email_block footer_colum">
+              <span class="icon_colum"><i class="far fa-envelope"></i></span>
+              <div class="email_content colum_content">
+                <p class="email_title">EMAIL</p>
+                <span class="full_email">info@brainfors.com</span>
+                <span class="full_email">marketing@brainfors.com</span>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col-2">
-        <div class="footer_item_main item1">
-          <h4 class="item_title">Account</h4>
-          <ul class="footer_navigation_block">
-            <li class="footer_item"><a class="footer_link" href="#">About us</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>
-          </ul>
+        <div class="col-md-3 col-sm-4 col-12 mt-md-4">
+          <div class="footer_item_main item1">
+            <ul class="footer_navigation_block">
+              <li class="footer_item"><a class="footer_link" href="index.html">Home</a></li>
+              <li class="footer_item"><a class="footer_link" href="aboutUs.html">About Us</a></li>
+              <li class="footer_item"><a class="footer_link" href="about.html">Meet the team</a></li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <div class="col-2">
-        <div class="footer_item_main item1">
-          <h4 class="item_title">Account</h4>
-          <ul class="footer_navigation_block">
-            <li class="footer_item"><a class="footer_link" href="#">About us</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>
-          </ul>
+        <div class="col-md-3 col-sm-4 col-12 mt-md-4">
+          <div class="footer_item_main item1">
+            <ul class="footer_navigation_block">
+              <li class="footer_item"><a class="footer_link" href="what-we-do.html">What we do</a></li>
+              <li class="footer_item"><a class="footer_link active" href="javascript:void(0)">How we work</a></li>
+              <li class="footer_item"><a class="footer_link" href="portfolio.html">portfolio</a></li>
+            </ul>
+          </div>
         </div>
-      </div>
+        <div class="col-md-3 col-sm-4 col-12 mt-md-4">
+          <div class="footer_item_main item1">
+            <ul class="footer_navigation_block">
+              <li class="footer_item"><a class="footer_link" href="#">careers</a></li>
+              <li class="footer_item"><a class="footer_link" href="contactUs.html">Contact us</a></li>
+              <li class="footer_item"><a class="footer_link" href="#">blog</a></li>
+            </ul>
+          </div>
+        </div>
 
+      </div>
     </div>
-  </div>
-  <span class="footer_down_line"></span>
-  <div class="footer_down_text">
-    <p class="company_name">© brain fors. 2021. All Rights Reserved</p>
-    <div class="social_icons">
-      <span class="fb_icon"><a href="#"><i class="fab fa-facebook-f"></i></a></span>
-      <span class="insta_icon"><a href="#"><i class="fab fa-instagram"></i></a></span>
-      <span class="linkedin_icon"><a href="#"><i class="fab fa-linkedin-in"></i></a></span>
+    <span class="footer_down_line"></span>
+    <div class="footer_down_text">
+      <p class="company_name">© brain fors. 2021. All Rights Reserved</p>
+      <div class="social_icons">
+        <span class="fb_icon"><a href="https://www.facebook.com/brainfors" target="_blank"><i class="fab fa-facebook-f"></i></a></span>
+        <span class="insta_icon"><a href="https://www.instagram.com/brain.fors/" target="_blank"><i class="fab fa-instagram"></i></a></span>
+        <span class="linkedin_icon"><a href="https://www.linkedin.com/company/brainforscompany/mycompany/" target="_blank"><i class="fab fa-linkedin-in"></i></a></span>
+      </div>
     </div>
   </div>
 </footer>
