--- a/what-we-do.html
+++ b/what-we-do.html
@@ -126,10 +126,12 @@
                                                 <div class="board_line">
                                                     <div class="row">
                                                         <div class="col-6">
-                                                            <p class="project_info first_text"></p>
+                                                            <h4 class="board_line_title">Web</h4>
+                                                            <p class="project_info first_text"> 18 people</p>
                                                         </div>
                                                         <div class="col-6">
-                                                            <p class="project_info second_text"></p>
+                                                            <h4 class="board_line_title">projects</h4>
+                                                            <p class="project_info first_text">30</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -227,10 +229,12 @@
                                                 <div class="board_line">
                                                     <div class="row">
                                                         <div class="col-6">
-                                                            <p class="project_info first_text"></p>
+                                                            <h4 class="board_line_title">Mobile</h4>
+                                                            <p class="project_info first_text">4 people</p>
                                                         </div>
                                                         <div class="col-6">
-                                                            <p class="project_info second_text"></p>
+                                                            <h4 class="board_line_title">Project</h4>
+                                                            <p class="project_info first_text">6</p>
                                                         </div>
                                                     </div>
                                                 </div>
