change portfolio img

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -119,15 +119,15 @@
                                     </div>
                                     <div class="col-lg-7 col-12 order-lg-last order-first" >
                                         <div class="project_screenshot">
-                                            <img class="project_img" src="./img/5.jpg" alt="Photo">
+                                            <img class="project_img" src="./img/web_team.JPG" alt="Photo">
                                         </div>
                                         <div class="row line_up line_up_left">
                                             <div class="col-12">
                                                 <div class="board_line">
                                                     <div class="row">
                                                         <div class="col-6">
-                                                            <h4 class="board_line_title">Web</h4>
-                                                            <p class="project_info first_text"> 18 people</p>
+                                                            <h4 class="board_line_title">Developers</h4>
+                                                            <p class="project_info first_text"> 18</p>
                                                         </div>
                                                         <div class="col-6">
                                                             <h4 class="board_line_title">projects</h4>
@@ -229,8 +229,8 @@
                                                 <div class="board_line">
                                                     <div class="row">
                                                         <div class="col-6">
-                                                            <h4 class="board_line_title">Mobile</h4>
-                                                            <p class="project_info first_text">4 people</p>
+                                                            <h4 class="board_line_title">Developers</h4>
+                                                            <p class="project_info first_text">4</p>
                                                         </div>
                                                         <div class="col-6">
                                                             <h4 class="board_line_title">Project</h4>
