--- a/how-we-work.html
+++ b/how-we-work.html
@@ -67,13 +67,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="./img/5.jpg" alt="First slide">
+          <img class="d-block w-100" src="./img/work_slide1.JPG" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="./img/5.jpg" alt="Second slide">
+          <img class="d-block w-100" src="./img/work_slide2.JPG" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="./img/5.jpg" alt="Third slide">
+          <img class="d-block w-100" src="./img/work_slide3.JPG" alt="Third slide">
         </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
   <div class="container-fluid">
     <div class="success_stories_block">
       <div class="text_block">
-        <h3 class="block_title">SUCCESS STORIES</h3>
+        <h3 class="block_title">WE PARTNER WITH</h3>
         <p class="block_content"> Fortune 500 companies and world-class
           brands have chosen Intellectsoft as a reliable digital
           transformation partner.</p>
@@ -89,13 +89,14 @@
 
       <div class="carousel_block">
         <div class="owl-carousel">
-          <img src="./img/logo_green.svg" alt="Logo">
-          <img src="./img/logo_green.svg" alt="Logo">
-          <img src="./img/logo_green.svg" alt="Logo">
-          <img src="./img/logo_green.svg" alt="Logo">
-          <img src="./img/logo_green.svg" alt="Logo">
-          <img src="./img/logo_green.svg" alt="Logo">
-          <img src="./img/logo_green.svg" alt="Logo">
+          <img src="./img/partner_logo/GIZ.svg" alt="Logo">
+          <img src="./img/partner_logo/mantashov.png" alt="Logo">
+          <img src="./img/partner_logo/rgb_logo.png" alt="Logo">
+          <img src="./img/partner_logo/eif.png" alt="Logo">
+          <img src="./img/partner_logo/GTC-logo.png" alt="Logo">
+          <img src="./img/partner_logo/politex.png" alt="Logo">
+          <img src="./img/partner_logo/shph.png" alt="Logo">
+          <img src="./img/partner_logo/tarac_qolej.png" alt="Logo">
         </div>
       </div>
 
