--- a/aboutUs.html
+++ b/aboutUs.html
@@ -71,10 +71,10 @@
           <img class="d-block w-100" src="./img/5.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="./img/5.jpg" alt="Second slide">
+          <img class="d-block w-100" src="./img/about_us_slide2.JPG" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="./img/5.jpg" alt="Third slide">
+          <img class="d-block w-100" src="./img/about_us_slide3.jpg" alt="Third slide">
         </div>
       </div>
     </div>
