creat new page careers

--- a/contactUs.html
+++ b/contactUs.html
@@ -41,7 +41,7 @@
         <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="how-we-work.html" class="nav-link active">How we work</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="careers.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
         <li class="nav-link-item  active"><a href="javascript:void(0)" class="nav-link">Contact us</a><span class="underline_link"></span></li>
       </ul>
       <div class='nav-toggle'>
@@ -111,7 +111,7 @@
               <div class="col-md-7 col-12 pr-md-0">
                 <div class="team_photo">
                   <div class="bg-fone">
-                    <p class="office_address">1 Alek Manukyan, Armenia, Gyumri</p>
+                    <p class="office_address">1 Alek Manukyan, Gyumri, Armenia</p>
                   </div>
 
                 </div>
@@ -120,7 +120,7 @@
                 <div class="contact_block">
                   <div class="phone_block">
                     <span class="phone_icon"><i class="fas fa-phone-alt"></i></span>
-                    <p class="phone_number">+374 35 -45-55</p>
+                    <p class="phone_number">+374 94 327 347</p>
                   </div>
                   <span class="line"></span>
                   <div class="mail_block">
@@ -194,7 +194,7 @@
           <div class="col-md-3 col-sm-4 col-12 mt-md-4">
             <div class="footer_item_main item1">
               <ul class="footer_navigation_block">
-                <li class="footer_item"><a class="footer_link" href="#">careers</a></li>
+                <li class="footer_item"><a class="footer_link" href="careers.html">careers</a></li>
                 <li class="footer_item"><a class="footer_link" href="javascript:void(0)">Contact us</a></li>
                 <li class="footer_item"><a class="footer_link" href="#">blog</a></li>
               </ul>
