--- a/how-we-work.html
+++ b/how-we-work.html
@@ -40,7 +40,7 @@
         <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
         <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link active">How we work</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="careers.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
         <li class="nav-link-item "><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
       </ul>
       <div class='nav-toggle'>
@@ -250,7 +250,7 @@
         <div class="col-md-3 col-sm-4 col-12 mt-md-4">
           <div class="footer_item_main item1">
             <ul class="footer_navigation_block">
-              <li class="footer_item"><a class="footer_link" href="#">careers</a></li>
+              <li class="footer_item"><a class="footer_link" href="careers.html">careers</a></li>
               <li class="footer_item"><a class="footer_link" href="contactUs.html">Contact us</a></li>
               <li class="footer_item"><a class="footer_link" href="#">blog</a></li>
             </ul>
