--- a/aboutUs.html
+++ b/aboutUs.html
@@ -42,7 +42,7 @@
         <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="how-we-work.html" class="nav-link active">How we work</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="careers.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
         <li class="nav-link-item "><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
       </ul>
       <div class='nav-toggle'>
@@ -254,7 +254,7 @@
         <div class="col-md-3 col-sm-4 col-12 mt-md-4">
           <div class="footer_item_main item1">
             <ul class="footer_navigation_block">
-              <li class="footer_item"><a class="footer_link" href="#">careers</a></li>
+              <li class="footer_item"><a class="footer_link" href="careers.html">careers</a></li>
               <li class="footer_item"><a class="footer_link" href="contactUs.html">Contact us</a></li>
               <li class="footer_item"><a class="footer_link" href="#">blog</a></li>
             </ul>
@@ -274,7 +274,6 @@
     </div>
   </div>
 </footer>
-</div>
 
 
 <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
