--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="how-we-work.html" class="nav-link active">How we work</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="careers.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
         <li class="nav-link-item "><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
       </ul>
       <div class='nav-toggle'>
