--- a/what-we-do.html
+++ b/what-we-do.html
@@ -43,7 +43,7 @@
                         class="underline_link"></span></li>
                 <li class="nav-link-item "><a href="portfolio.html" class="nav-link">portfolio</a><span
                         class="underline_link"></span></li>
-                <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span
+                <li class="nav-link-item"><a href="careers.html" class="nav-link">Careers</a><span
                         class="underline_link"></span></li>
                 <li class="nav-link-item "><a href="contactUs.html" class="nav-link">Contact us</a><span
                         class="underline_link"></span></li>
