changed what we do page script

--- a/careers.html
+++ b/careers.html
@@ -62,7 +62,7 @@
         <div class="bg_fone"></div>
         <div class="header_content">
             <h2 class="header_title">Join us on our journey</h2>
-            <p class="header_content_text">Fortune 500 companies and world-class brands have chosen Intellectsoft as a reliable digital transformation partner.</p>
+<!--            <p class="header_content_text">Fortune 500 companies and world-class brands have chosen Intellectsoft as a reliable digital transformation partner.</p>-->
         </div>
     </div>
     <div class="main_content">
@@ -96,7 +96,7 @@
                     professionals to find work in their hometown and deliver
                     services of high quality. Brain Fors started with a team of
                 </p>
-                <button class="btn btn_apply">Apply<i class="fas fa-chevron-right"></i></button>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdaB5d9hZ7oRNTUjStZNMkLEf03-CXMM1CPniqfilxYYVafqw/viewform" target="_blank" class="btn btn_apply">Apply<i class="fas fa-chevron-right"></i></a>
             </div>
             <div class="job_card">
                 <img src="./img/job_img_native.svg" alt="Logo">
@@ -108,13 +108,13 @@
                     professionals to find work in their hometown and deliver
                     services of high quality. Brain Fors started with a team of
                 </p>
-                <button class="btn btn_apply">Apply<i class="fas fa-chevron-right"></i></button>
+                <a class="btn btn_apply" href="https://docs.google.com/forms/d/e/1FAIpQLSdaB5d9hZ7oRNTUjStZNMkLEf03-CXMM1CPniqfilxYYVafqw/viewform" target="_blank">Apply<i class="fas fa-chevron-right"></i></a>
             </div>
         </div>
     </div>
     <div class="send_cv_block">
         <h2 class="main_title">At  Brain Fors we are</h2>
-        <p class="cv_block_text">Fortune 500 companies and world-class brands have chosen Intellectsoft as a reliable digital transformation partner.</p>
+        <p class="cv_block_text">Didn't find a matching job position? Never mind</p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdaB5d9hZ7oRNTUjStZNMkLEf03-CXMM1CPniqfilxYYVafqw/viewform" target="_blank" class="btn bnt_send">Send Us CV<i class="fas fa-chevron-right"></i></a>
     </div>
 </div>
