--- a/contactUs.html
+++ b/contactUs.html
@@ -62,8 +62,7 @@
     <div class="container-fluid">
       <div class="baner_title">
         <h2 class="hi_content">HELLO</h2>
-        <p class="baner_description">Fill in the below form to get along with us! It becomes a lot more amazing when we
-          get together.</p>
+        <p class="baner_description">Let's get in touch</p>
       </div>
       <div class="contact_form">
         <form>
