--- a/how-we-work.html
+++ b/how-we-work.html
@@ -82,19 +82,19 @@
     <div class="success_stories_block">
       <div class="text_block">
         <h3 class="block_title">WE PARTNER WITH</h3>
-        <p class="block_content"> Fortune 500 companies and world-class
-          brands have chosen Intellectsoft as a reliable digital
-          transformation partner.</p>
+<!--        <p class="block_content"> Fortune 500 companies and world-class-->
+<!--          brands have chosen Intellectsoft as a reliable digital-->
+<!--          transformation partner.</p>-->
       </div>
 
       <div class="carousel_block">
         <div class="owl-carousel">
           <img src="./img/partner_logo/GIZ.svg" alt="Logo">
           <img src="./img/partner_logo/mantashov.png" alt="Logo">
-          <img src="./img/partner_logo/rgb_logo.png" alt="Logo">
-          <img src="./img/partner_logo/eif.png" alt="Logo">
-          <img src="./img/partner_logo/GTC-logo.png" alt="Logo">
-          <img src="./img/partner_logo/politex.png" alt="Logo">
+          <img src="./img/partner_logo/rgb_logo.png" alt="Logo" class="static_size">
+          <img src="./img/partner_logo/eif.png" alt="Logo" class="static_size">
+          <img src="./img/partner_logo/GTC-logo.png" alt="Logo" class="static_size">
+          <img src="./img/partner_logo/politex.png" alt="Logo" class="static_size">
           <img src="./img/partner_logo/shph.png" alt="Logo">
           <img src="./img/partner_logo/tarac_qolej.png" alt="Logo">
         </div>
@@ -107,7 +107,7 @@
     <div class="articel_main">
     <div class="row">
       <div class="col-md-6 col-12">
-        <img data-aos="fade-up" src="./img/article_photo.svg" alt="img">
+        <img data-aos="fade-up" src="./img/dedicated_development.png" alt="img">
       </div>
       <div class="col-md-6 col-12">
         <div class="article_content " data-aos="fade-down">
@@ -146,13 +146,13 @@
             <div class="col-md-4 col-12">
               <div class="card_item">
                 <img class="card_img" src="./img/extension_icon.svg" alt="photo">
-                <p class="card_name">Team Extension</p>
+                <p class="card_name">Quality Product</p>
               </div>
             </div>
             <div class="col-md-4 col-12">
               <div class="card_item">
                 <img class="card_img" src="./img/project_icon.svg" alt="photo">
-                <p class="card_name">Project-Based Model</p>
+                <p class="card_name">Time saving</p>
               </div>
             </div>
           </div>
@@ -176,7 +176,7 @@
           </div>
         </div>
         <div class="col-md-6 12">
-          <img data-aos="fade-down" class="baner_img" src="./img/how_we_work_img1.svg" alt="Photo">
+          <img data-aos="fade-down" class="baner_img" src="./img/custom_development.png" alt="Photo">
         </div>
       </div>
     </div>
@@ -187,9 +187,9 @@
   <div class="delivery_location_block">
     <div class="location_block_content">
       <div class="text_block">
-        <h3 class="block_title">HQ & DELIVERY LOCATIONS</h3>
-        <p class="block_content">We scout and hire the best technical talent in Eastern
-          Europe to ensure your team is staffed with top qualified engineers.</p>
+        <h3 class="block_title">Our clients worldwide</h3>
+<!--        <p class="block_content">We scout and hire the best technical talent in Eastern-->
+<!--          Europe to ensure your team is staffed with top qualified engineers.</p>-->
       </div>
       <img src="./img/map_img.svg" alt="Map">
       <a href="contactUs.html" target="_blank" class="btn btn-go-project">Got a project for us ? <i class="fas fa-chevron-right"></i></a>
