change logo and photo

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <nav class="header-nav">
 
       <a href="index.html?reload=false" class="navbar-brand">
-        <img src="./img/logo_green.svg" alt="logo">
+        <img src="./img/logo_green.png" alt="logo">
       </a>
 
       <ul class="nav-list media_hide">
